--- a/src/app/not-found-page/not-found-page.component.html
+++ b/src/app/not-found-page/not-found-page.component.html
@@ -1,7 +1,7 @@
 <div class="not-found-page">
   <main>
     <article>
-      <h2 class="headline">Reader Ponders Self-Referential Headline</h2>
+      <h2 class="headline">Reader Puzzled by Self-Referential Headline</h2>
 
       <div class="photo">[PHOTO]</div>
 
