--- a/src/app/article-page/article-page.component.html
+++ b/src/app/article-page/article-page.component.html
@@ -24,6 +24,11 @@
       <div class="comments">
         <h3>Comments</h3>
 
+        <form>
+          <input placeholder="Post a new comment&hellip;">
+          <button>Submit</button>
+        </form>
+
         <div *ngFor="let page of paginatedComments; let pageNumber = index">
           <div *ngIf="pageNumber < pagesDisplayed">
             <div *ngFor="let comment of page" class="comment">
