--- a/src/app/article-page/article-page.component.scss
+++ b/src/app/article-page/article-page.component.scss
@@ -124,6 +124,7 @@ $transition-speed: 0.2s ease-in-out;
           color: white;
           font: 1rem "Arvo", serif;
           line-height: 1rem;
+          outline: none;
           padding: 0.5rem 1rem;
           transition: all $transition-speed;
         }
