--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,4 +1,8 @@
-$dark-gray: #333333;
-$light-blue: #6699cc;
+$app-width: 90%;
+$app-max-width: 1366px;
+
 $light-gray: #cccccc;
 $medium-gray: #666666;
+$dark-gray: #333333;
+
+$light-blue: #6699cc;
