--- a/src/app/not-found-page/not-found-page.component.scss
+++ b/src/app/not-found-page/not-found-page.component.scss
@@ -2,7 +2,8 @@
 
 .not-found-page {
   margin: 0 auto;
-  width: 90%;
+  max-width: $app-max-width;
+  width: $app-width;
 
   main {
     article {
@@ -41,6 +42,30 @@
           margin-right: 0.25rem;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .not-found-page main article {
+    .headline {
+      font-size: 1.75rem;
+    }
+
+    .photo {
+      padding: 20% 0;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .not-found-page main article {
+    .headline {
+      font-size: 1.5rem;
+    }
+
+    .photo {
+      padding: 25% 0;
     }
   }
 }
