--- a/src/app/category-page/category-page.component.scss
+++ b/src/app/category-page/category-page.component.scss
@@ -1,5 +1,7 @@
 @import "main.scss";
 
+$transition-speed: 0.2s ease-in-out;
+
 .category-page ::ng-deep {
   display: flex;
   margin: 0 auto;
@@ -76,9 +78,19 @@
   }
 
   article {
-    cursor: pointer;
     margin-top: 1rem;
-    outline: none;
+
+    .headline {
+      cursor: pointer;
+      outline: none;
+      transition: color $transition-speed;
+    }
+
+    .headline:focus,
+    .headline:hover,
+    .headline:active {
+      color: $light-gray;
+    }
 
     .photo,
     .video {
