Adjust article headline line heights

--- a/src/app/article-page/article-page.component.scss
+++ b/src/app/article-page/article-page.component.scss
@@ -196,6 +196,7 @@ $transition-speed: 0.2s ease-in-out;
   .article-page main article {
     .headline {
       font-size: 1.75rem;
+      line-height: 2rem;
     }
 
     .photo,
@@ -209,6 +210,7 @@ $transition-speed: 0.2s ease-in-out;
   .article-page main article {
     .headline {
       font-size: 1.5rem;
+      line-height: 1.75rem;
     }
 
     .photo,
